--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<nav>
 <ul>
 <li><a href="https://open.spotify.com/playlist/549lx4U7hl7dSSRMoGIUga">Spotify playlista ove godine</a></li>
-<li><a href="/dokumenti/The_rise_of_Electro_Swing.pdf">"The Rise of Electro Swing" - Chris Inglis</a></li>
-<li><a href="/index2.html">Galerija</a></li>
+<li><a href="dokumenti/The_rise_of_Electro_Swing.pdf">"The Rise of Electro Swing" - Chris Inglis</a></li>
+<li><a href="index2.html">Galerija</a></li>
 </ul>
 </nav>
 	<h2>O meni:</h2>
