--- a/index2.html
+++ b/index2.html
@@ -14,10 +14,10 @@
 	 <video width="1000" height="563" controls>
 	 	<source src="video/video 1.mp4" type="video/mp4">
 	 </video> </br>
-         <h1>Kurukuru Kururin?</h1>
-         <iframe width="560" height="315"
+         <h1>Electro Swing Mix</h1>
+         <iframe width="1000" height="563"
 src="https://www.youtube.com/watch?v=jHEpgsjknCs" frameborder="0"
-allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture" allowfullscreen></iframe>
+allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture" allowfullscreen></iframe> </br>
 	 <h1>Kurukuru Kururin?</h1>
 	 <audio controls>
 	 	<source src="audio/audio 1.mp3" type="audio/mp3">
