--- a/index2.html
+++ b/index2.html
@@ -15,9 +15,7 @@
 	 	<source src="video/video 1.mp4" type="video/mp4">
 	 </video> </br>
          <h1>Electro Swing Mix</h1>
-         <iframe width="1000" height="563"
-         src="https://www.youtube.com/watch?v=jHEpgsjknCs" frameborder="0"
-         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-inpicture" allowfullscreen></iframe> </br>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/jHEpgsjknCs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </br>
 	 <h1>Kurukuru Kururin?</h1>
 	 <audio controls>
 	 	<source src="audio/audio 1.mp3" type="audio/mp3">
